feat:completing docs for /users
